// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Newsletter Puff renders null when is already subscribed 1`] = `null`;

exports[`Inline Newsletter Puff renders placeholder when loading 1`] = `
<div
  className="inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz css-view-1dbjc4n"
  style={
    Object {
      "height": "257px",
    }
  }
>
  <div
    className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-15282we r-justifyContent-1777fci"
  >
    <svg
      height="auto"
      style={
        Object {
          "maxHeight": "50%",
          "maxWidth": "25%",
        }
      }
      version="1.1"
      viewBox="145 50 108 120"
      width="100%"
    >
      <g
        fill="none"
        fillRule="evenodd"
        stroke="none"
        strokeWidth="1"
        style={Object {}}
      >
        <path
          d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
          fill="#FFFFFF"
          style={Object {}}
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Inline Newsletter Puff renders puff when not already subscribed 1`] = `
<div
  className="inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz css-view-1dbjc4n"
>
  <div
    className="inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "70.42253521126761%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <img
          className="responsiveweb-sc-142djdt-0 jYhpic"
          onLoad={[Function]}
          onTransitionEnd={[Function]}
          src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
        />
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-15282we r-justifyContent-1777fci"
        >
          <svg
            height="auto"
            style={
              Object {
                "maxHeight": "50%",
                "maxWidth": "25%",
              }
            }
            version="1.1"
            viewBox="145 50 108 120"
            width="100%"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
              style={Object {}}
            >
              <path
                d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                fill="#FFFFFF"
                style={Object {}}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline-newsletter-puff__InpSignupContainer-sc-13hmjc-5 fgHAmw inline-newsletter-puff__InpSignupContainer-sc-13hmjc-5 fgHAmw css-view-1dbjc4n"
  >
    <div
      className="inline-newsletter-puff__InpSignupLabel-sc-13hmjc-6 fGDuEb inline-newsletter-puff__InpSignupLabel-sc-13hmjc-6 fGDuEb css-text-901oao"
      dir="auto"
    >
      STRAIGHT IN YOUR INBOX
    </div>
    <div
      className="inline-newsletter-puff__InpSignupHeadline-sc-13hmjc-7 kSVfs inline-newsletter-puff__InpSignupHeadline-sc-13hmjc-7 kSVfs css-text-901oao"
      dir="auto"
    >
      Politics. Explained.
    </div>
    <div
      className="inline-newsletter-puff__InpCopy-sc-13hmjc-8 hLhbxF inline-newsletter-puff__InpCopy-sc-13hmjc-8 hLhbxF css-text-901oao"
      dir="auto"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </div>
    <div
      className="inline-newsletter-puff__InpSignupCTAContainer-sc-13hmjc-9 hrIwVO inline-newsletter-puff__InpSignupCTAContainer-sc-13hmjc-9 hrIwVO css-view-1dbjc4n"
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#1D1D1B",
            "borderRadius": 2,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#1D1D1B",
            "cursor": "pointer",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 16,
            "height": 45,
            "justifyContent": "center",
            "letterSpacing": 0.2,
            "lineHeight": 0,
            "minWidth": 100,
            "paddingTop": 4,
            "width": "100%",
          }
        }
        type="button"
      >
        Sign up to newsletter
      </button>
    </div>
  </div>
</div>
`;

exports[`Inline Newsletter Puff renders saving when the button is clicked 1`] = `
<div
  className="inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz css-view-1dbjc4n"
>
  <div
    className="inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "70.42253521126761%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <img
          className="responsiveweb-sc-142djdt-0 jYhpic"
          onLoad={[Function]}
          onTransitionEnd={[Function]}
          src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
        />
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-15282we r-justifyContent-1777fci"
        >
          <svg
            height="auto"
            style={
              Object {
                "maxHeight": "50%",
                "maxWidth": "25%",
              }
            }
            version="1.1"
            viewBox="145 50 108 120"
            width="100%"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
              style={Object {}}
            >
              <path
                d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                fill="#FFFFFF"
                style={Object {}}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline-newsletter-puff__InpSignupContainer-sc-13hmjc-5 fgHAmw inline-newsletter-puff__InpSignupContainer-sc-13hmjc-5 fgHAmw css-view-1dbjc4n"
  >
    <div
      className="inline-newsletter-puff__InpSignupLabel-sc-13hmjc-6 fGDuEb inline-newsletter-puff__InpSignupLabel-sc-13hmjc-6 fGDuEb css-text-901oao"
      dir="auto"
    >
      STRAIGHT IN YOUR INBOX
    </div>
    <div
      className="inline-newsletter-puff__InpSignupHeadline-sc-13hmjc-7 kSVfs inline-newsletter-puff__InpSignupHeadline-sc-13hmjc-7 kSVfs css-text-901oao"
      dir="auto"
    >
      Politics. Explained.
    </div>
    <div
      className="inline-newsletter-puff__InpCopy-sc-13hmjc-8 hLhbxF inline-newsletter-puff__InpCopy-sc-13hmjc-8 hLhbxF css-text-901oao"
      dir="auto"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </div>
    <div
      className="inline-newsletter-puff__InpSignupCTAContainer-sc-13hmjc-9 hrIwVO inline-newsletter-puff__InpSignupCTAContainer-sc-13hmjc-9 hrIwVO css-view-1dbjc4n"
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#1D1D1B",
            "borderRadius": 2,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#1D1D1B",
            "cursor": "pointer",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 16,
            "height": 45,
            "justifyContent": "center",
            "letterSpacing": 0.2,
            "lineHeight": 0,
            "minWidth": 100,
            "paddingTop": 4,
            "width": "100%",
          }
        }
        type="button"
      >
        Saving…
      </button>
    </div>
  </div>
</div>
`;

exports[`Inline Newsletter Puff renders signup state 1`] = `
<div
  className="inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz css-view-1dbjc4n"
>
  <div
    className="inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "70.42253521126761%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <img
          className="responsiveweb-sc-142djdt-0 jYhpic"
          onLoad={[Function]}
          onTransitionEnd={[Function]}
          src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
        />
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-15282we r-justifyContent-1777fci"
        >
          <svg
            height="auto"
            style={
              Object {
                "maxHeight": "50%",
                "maxWidth": "25%",
              }
            }
            version="1.1"
            viewBox="145 50 108 120"
            width="100%"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
              style={Object {}}
            >
              <path
                d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                fill="#FFFFFF"
                style={Object {}}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline-newsletter-puff__InpSignupContainer-sc-13hmjc-5 fgHAmw inline-newsletter-puff__InpSignupContainer-sc-13hmjc-5 fgHAmw css-view-1dbjc4n"
  >
    <div
      className="inline-newsletter-puff__InpSignupLabel-sc-13hmjc-6 fGDuEb inline-newsletter-puff__InpSignupLabel-sc-13hmjc-6 fGDuEb css-text-901oao"
      dir="auto"
    >
      STRAIGHT IN YOUR INBOX
    </div>
    <div
      className="inline-newsletter-puff__InpSignupHeadline-sc-13hmjc-7 kSVfs inline-newsletter-puff__InpSignupHeadline-sc-13hmjc-7 kSVfs css-text-901oao"
      dir="auto"
    >
      Politics. Explained.
    </div>
    <div
      className="inline-newsletter-puff__InpCopy-sc-13hmjc-8 hLhbxF inline-newsletter-puff__InpCopy-sc-13hmjc-8 hLhbxF css-text-901oao"
      dir="auto"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </div>
    <div
      className="inline-newsletter-puff__InpSignupCTAContainer-sc-13hmjc-9 hrIwVO inline-newsletter-puff__InpSignupCTAContainer-sc-13hmjc-9 hrIwVO css-view-1dbjc4n"
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#1D1D1B",
            "borderRadius": 2,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#1D1D1B",
            "cursor": "pointer",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 16,
            "height": 45,
            "justifyContent": "center",
            "letterSpacing": 0.2,
            "lineHeight": 0,
            "minWidth": 100,
            "paddingTop": 4,
            "width": "100%",
          }
        }
        type="button"
      >
        Sign up to newsletter
      </button>
    </div>
  </div>
</div>
`;

exports[`Inline Newsletter Puff renders the success view  1`] = `
<div
  className="inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz inline-newsletter-puff__InpContainer-sc-13hmjc-0 iUoiZz css-view-1dbjc4n"
>
  <div
    className="inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv inline-newsletter-puff__InpImageContainer-sc-13hmjc-1 fAjoxv css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "70.42253521126761%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <img
          className="responsiveweb-sc-142djdt-0 jYhpic"
          onLoad={[Function]}
          onTransitionEnd={[Function]}
          src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg"
        />
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-15282we r-justifyContent-1777fci"
        >
          <svg
            height="auto"
            style={
              Object {
                "maxHeight": "50%",
                "maxWidth": "25%",
              }
            }
            version="1.1"
            viewBox="145 50 108 120"
            width="100%"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
              style={Object {}}
            >
              <path
                d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                fill="#FFFFFF"
                style={Object {}}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline-newsletter-puff__InpSubscribedContainer-sc-13hmjc-2 cJNdAl inline-newsletter-puff__InpSubscribedContainer-sc-13hmjc-2 cJNdAl css-view-1dbjc4n"
  >
    <div
      className="inline-newsletter-puff__InpSubscribedHeadline-sc-13hmjc-3 gFPzTp inline-newsletter-puff__InpSubscribedHeadline-sc-13hmjc-3 gFPzTp css-text-901oao"
      dir="auto"
    >
      You’ve successfully signed up
    </div>
    <div
      className="inline-newsletter-puff__InpSubscribedCopy-sc-13hmjc-4 fopmPr inline-newsletter-puff__InpSubscribedCopy-sc-13hmjc-4 fopmPr css-text-901oao"
      dir="auto"
    >
      Congratulations you can now enjoy daily updates from Red Box.
    </div>
    <div
      className="inline-newsletter-puff__InpPreferencesContainer-sc-13hmjc-10 jWzuZh inline-newsletter-puff__InpPreferencesContainer-sc-13hmjc-10 jWzuZh css-view-1dbjc4n"
    >
      <a
        className="linkweb__RespLink-yfb9n-0 cCCShB"
        href="https://home.thetimes.co.uk/myNews"
        onClick={[Function]}
        target={null}
      >
        <div
          className="inline-newsletter-puff__InpPreferencesText-sc-13hmjc-11 bEnqSP inline-newsletter-puff__InpPreferencesText-sc-13hmjc-11 bEnqSP css-text-901oao"
          dir="auto"
        >
          Manage preferences here
          <div
            className="inline-newsletter-puff__InpIconContainer-sc-13hmjc-12 esMeGB inline-newsletter-puff__InpIconContainer-sc-13hmjc-12 esMeGB css-view-1dbjc4n r-display-xoduu5"
          >
            <svg
              aria-label="icon-forward-arrow"
              height={12}
              style={Object {}}
              viewBox="42 12 60 120"
              width={7}
            >
              <g
                fill="#006699"
                style={Object {}}
              >
                <path
                  d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                  style={Object {}}
                />
              </g>
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
